turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:19: error: not found: value i
		if(rule(i) == "L")
                        ^LangtonsAnt:24: error: not found: value i
		else if (rule(i) == "R")
                              ^